--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "global"]
 	path = global
-	url = git@git.rz.uni-augsburg.de:swtpvs-m/smds-uniautonom-global-src.git
+	url = https://git.rz.uni-augsburg.de/swtpvs-m/smds-uniautonom-global-src.git
