wip design for new GUI elements finished

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(OpenCV REQUIRED)
 
 include_directories(.)
 include_directories(include)
-include_directories(/usr/include/opencv4)
+include_directories(/usr/local/include/opencv4)
 
 adtf_add_executable(AutonomousController
     main.cpp
