basic load button feature added, loading files to plainTextWidget, file history in combobox

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,10 @@ adtf_add_executable(UNIAutonomRemoteGUI
     mainwindow.ui
     dialog_preferences.cpp
     dialog_preferences.ui
+    log_analyser.cpp
+#    log_analyser.h
+    log_analyser.ui
+
 
     adtfmediasample.h
     networkclient.cpp
