code cleaned: added comments, shifted log serialization from mainwindow to seperate log class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ adtf_add_executable(UNIAutonomRemoteGUI
     dialog_preferences.ui
     dialog_log_analyzer.cpp
     dialog_log_analyzer.ui
+    log.cpp
 
     adtfmediasample.h
     networkclient.cpp
