basic log model added: model for loading content to table view in log analyzer dialog

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,7 +27,8 @@ adtf_add_executable(UNIAutonomRemoteGUI
     dialog_preferences.ui
     dialog_log_analyzer.cpp
     dialog_log_analyzer.ui
-    log.cpp
+        log_serialization.cpp
+    log_model.cpp
 
     adtfmediasample.h
     networkclient.cpp
