[R-05][In-Progress] add filtering capabilities

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ adtf_add_executable(UNIAutonomRemoteGUI
     dialog_log_analyzer.ui
         log_serialization.cpp
     log_model.cpp
+    proxy_model.cpp
 
     adtfmediasample.h
     networkclient.cpp
