[F-03][In-Progress] add zoomReset

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,9 @@ adtf_add_executable(UNIAutonomRemoteGUI
 
     proxy_model.cpp
 
+    log_chart_view.cpp
+        log_chart_view.h
+
     adtfmediasample.h
     networkclient.cpp
 
