[F-01] [In-Progress] Svg Export Button + Logik

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_AUTOUIC ON)
 
 set(ADTF_DIR /opt/adtf/2.14.3)
 
-find_package(Qt5 COMPONENTS Core Widgets Network Charts REQUIRED)
+find_package(Qt5 COMPONENTS Core Widgets Network Charts Svg REQUIRED)
 find_package(ADTF REQUIRED)
 find_package(OpenCV REQUIRED)
 
@@ -93,4 +93,4 @@ adtf_add_executable(UNIAutonomRemoteGUI
     src/NearfieldGrid/MapTreeNode.cpp
 )
 
-target_link_libraries(UNIAutonomRemoteGUI Qt5::Widgets Qt5::Network Qt5::Charts ${OpenCV_LIBS})
+target_link_libraries(UNIAutonomRemoteGUI Qt5::Widgets Qt5::Network Qt5::Charts Qt5::Svg ${OpenCV_LIBS})
